--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="js/pacman.js"></script>
     <script src="js/ghost.js"></script>
     <script src="js/game.js"></script>
+    <button onclick="startGame()">start game!</button>
   </body>
 </html>
