--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <script src="js/pacman.js"></script>
     <script src="js/ghost.js"></script>
     <script src="js/game.js"></script>
-    <button onclick="startGame()">start game!</button>
+    <button class="startBtn" onclick="restartGame()">start game!</button>
   </body>
 </html>
