--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   </head>
 
   <body onload="onInit()" onkeyup="onMovePacman(event)">
-    <h2>Score: <span class="score">0</span></h2>
-
     <table class="board-container">
       <tbody class="board"></tbody>
     </table>
@@ -18,6 +16,7 @@
     <script src="js/pacman.js"></script>
     <script src="js/ghost.js"></script>
     <script src="js/game.js"></script>
-    <button class="startBtn" onclick="restartGame()">start game!</button>
+    <button class="startBtn" onclick="restartGame()">Start game!</button>
+    <button class="startBtn" onclick="openReadmePopup()">About the game</button>
   </body>
 </html>
