--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body onload="onInit()" onkeyup="onMovePacman(event)">
+    <h2><span class="score"></span><span class="time"></span></h2>
     <table class="board-container">
       <tbody class="board"></tbody>
     </table>
